--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Global */
 body {font-family: Arial, sans-serif; margin: 0; padding: 0;}
 header, nav, main, footer {padding: 1rem;}
-nav {list-style: none;}
+nav ul {list-style: none;}
 
 /* Medium screens */
 @media only screen and (min-width: 600px) {
